TFP-3316 legg til frisinn og k9 i opptjeningsaktivitet og gui